# Mosformer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
application/nn/include/: layers.h  llmConfig.h
common/include/: globals.h  my_assert.h  my_math.h
common/network/include/: comms.h
common/network/src/: comms.cpp
common/ring/include/: tensor.h
crypto/arithmetic_secret_sharing/include/: ass_protocols.h
crypto/parameters/include/: params.h
crypto/replicated_secret_sharing/include/: rss_protocols.h
scripts/: eval_bash.sh
secure_model/include/: party3pc.h
secure_model/src/: party3pc.cpp
tests/: llm3pc.cpp  llm_acc.cpp  pt2npz.py  rss.cpp  test_base.h
